# hermes-fleet-control

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
app/HermesFleetControl/: Package.swift
app/HermesFleetControl/Sources/HermesFleetControl/: FleetCLI.swift  FleetModels.swift  FleetNotificationManager.swift  MenuViews.swift  (+1 more)
assets/icons/: HermesFleetControl.icns
config/: fleet.yaml
control/: __init__.py  audit_log.py  auth_health.py  discovery.py  fleetctl.py  gateway_actions.py  hermes_profiles.py  local_mappings.py  manifest.py  network_checks.py  paths.py  redaction.py
docs/architecture/: technical-architecture.md
docs/dev-env/: README.md  launchagent.md  swift-build-notes.md
docs/prd/: hermes-fleet-control-prd.md
docs/release/: macos-release-checklist.md
docs/security/: safety-model.md
scripts/: __init__.py  fleet_watchdog_auto.py  generate_app_icon.py  launchagent.py  package_app.py  runtime_status.py
src/hermes_fleet/: __init__.py  cli.py  discover.py  models.py  redact.py
tests/: test_actions.py  test_audit_log.py  test_auth_health.py  test_auth_repair_command.py  test_discover.py  test_discovery.py  test_launchagent.py  test_launchagent_control.py  test_manifest.py  test_packaging.py  test_paths.py  test_profile_state.py  test_provider_auth_health.py  test_redaction.py  test_status_command.py  test_watchdog_command.py
