[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-fleet-control"
version = "0.1.0"
description = "Local-first control plane for Hermes Agent profiles and messaging gateways."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Hermes Fleet Control contributors" }]
keywords = ["hermes-agent", "discord", "telegram", "slack", "ops", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]

[project.scripts]
hermes-fleet = "hermes_fleet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
